Updated animation on mobile to fix scaling issue * Updated filter/sort lists to use flexbox

--- a/app/styles/components/atom.scss
+++ b/app/styles/components/atom.scss
@@ -19,7 +19,6 @@ $atomContainerBackground: $blackDark;
 	border: 1px solid $atomBorder;
 	height: 100px;
 	left: 0;
-	opacity: 1;
 	padding: 5px 5px 5px 10px;
 	position: absolute;
 	top: 0;
@@ -32,6 +31,9 @@ $atomContainerBackground: $blackDark;
 	-webkit-transition-duration: 0.3s;
 	-webkit-transition-timing-function: ease-out;
 	width: 100px;
+	&.enter {
+		opacity: 1;
+	}
 	&.leave {
 		opacity: 0;
 	}
@@ -83,7 +85,6 @@ $atomContainerBackground: $blackDark;
 
 .atom-list {
 	position: relative;
-	clear: both;
 	width: 500px;
 	height: 300px;
 	border: 1px solid $atomBorder;
