--- a/app/styles/components/filter.scss
+++ b/app/styles/components/filter.scss
@@ -1,4 +1,10 @@
 .filter-container {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 	h3 {
 		margin: 5px;
 	}
