--- a/app/styles/components/sorter.scss
+++ b/app/styles/components/sorter.scss
@@ -1,9 +1,14 @@
 .sort-container {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 	h3 {
 		margin: 5px;
 	}
 	.sort-list {
-		clear: both;
 		.btn {
 			margin: 5px;
 		}
